# book_black_hat_rust

ch1/sha1_cracker/: Cargo.toml
ch1/sha1_cracker/src/: main.rs
ch2/tricoder/: Cargo.toml
ch2/tricoder/src/: main.rs
