[package]
name = "tricoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
rayon = "1.7.0"

serde = { version = "1.0.183", features = ["derive"] }
reqwest = { version = "0.11.18", default-features = false, features = [
    "json",
    "blocking",
    "rustls-tls",
] }
thiserror = "1.0.46"
trust-dns-resolver = "0.22.0"
